Change title setup

--- a/src/title.tex
+++ b/src/title.tex
@@ -6,9 +6,9 @@
     \textsc{\Large Czech Technical University in Prague}\\[1em]
     \textsc{\large Faculty of Electrical Engineering\\
     \Department\\
-    Multi-robot Systems\\[3em]
+    Czech Institute of Informatics, Robotics and Cybernetics\\[3em]
     }
-    \includegraphics[height=4.1cm]{fig/ctu_lion.pdf}\\[3em]
+    \includegraphics[height=4.1cm]{fig/ctu_logo_blue.pdf}\\[3em]
 
     \textbf{\textsc{\Huge \Title}}\\[2em]
 
