Add NLP abbreviations

--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -20,4 +20,8 @@
   \acro{UAV}[UAV]{Unmanned Aerial Vehicle}
   \acro{UGV}[UGV]{Unmanned Ground Vehicle}
   \acro{UKF}[UKF]{Unscented Kalman Filter}
+  
+  \acro{RAG}[RAG]{Retrieval-Augmented Generation}
+  \acro{NLP}[NLP]{Natural Language Procession}
+  \acro{STS}[STS]{Semantic Textual Similarity}
 \end{acronym}
