change meta information

--- a/main.tex
+++ b/main.tex
@@ -5,17 +5,18 @@
 
 %% | ---------------- document meta information --------------- |
 
-\newcommand{\Author}{John Smith}
+\newcommand{\Author}{Yauheni Zviazdou}
 \newcommand{\Department}{Department of Cybernetics}
-\newcommand{\Supervisor}{Ing. My Supervisor, Ph.D.}
+\newcommand{\Supervisor}{Ing. Jan Šedivý, CSc.}
 \newcommand{\SupervisorSpecialist}{Ing. My Specialist, Ph.D.}
-\newcommand{\Programme}{Electrical Engineering and Information Technology}
-\newcommand{\Field}{Artificial Intelligence and Biocybernetics}
-\newcommand{\Title}{My Thesis Title\\[0.5em]Can Span Multiple Lines}
+\newcommand{\Programme}{Open Informatics}
+\newcommand{\Field}{Artificial Intelligence and Computer Science}
+% \newcommand{\Title}{My Thesis Title\\[0.5em]Can Span Multiple Lines}
+\newcommand{\Title}{From FastText to Transformer \\[0.05em]Models, and their Application in \\[0.2em]Retrieval-Augmented Generation}
 \newcommand{\Keywords}{Unmanned Aerial Vehicles, Automatic Control}
 \newcommand{\KlicovaSlova}{Bezpilotní Prostředky, Automatické Řízení}
-\newcommand{\Year}{2021}
-\newcommand{\Month}{January}
+\newcommand{\Year}{2024}
+\newcommand{\Month}{May}
 \newcommand{\Date}{\Month~\Year}
 \newcommand{\Location}{Prague}
 
