--- a/main.bib
+++ b/main.bib
@@ -33,3 +33,12 @@
   volume = {18},
   year = {2008},
 }
+
+@misc{muennighoff2023mteb,
+      title={MTEB: Massive Text Embedding Benchmark}, 
+      author={Niklas Muennighoff and Nouamane Tazi and Loïc Magne and Nils Reimers},
+      year={2023},
+      eprint={2210.07316},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
