--- a/main.tex
+++ b/main.tex
@@ -13,8 +13,8 @@
 \newcommand{\Field}{Artificial Intelligence and Computer Science}
 % \newcommand{\Title}{My Thesis Title\\[0.5em]Can Span Multiple Lines}
 \newcommand{\Title}{From FastText to Transformer \\[0.05em]Models, and their Application in \\[0.2em]Retrieval-Augmented Generation}
-\newcommand{\Keywords}{Unmanned Aerial Vehicles, Automatic Control}
-\newcommand{\KlicovaSlova}{Bezpilotní Prostředky, Automatické Řízení}
+\newcommand{\Keywords}{Word Embedding, Semantic textual similarity, Retrieval-Augmented Generation}
+\newcommand{\KlicovaSlova}{Word Embedding, Sémantická podobnost textu, Retrieval-Augmented generování}
 \newcommand{\Year}{2024}
 \newcommand{\Month}{May}
 \newcommand{\Date}{\Month~\Year}
