--- a/src/abstract_en.tex
+++ b/src/abstract_en.tex
@@ -7,7 +7,8 @@
 \section*{Abstract}
 \vskip 0.5em
 
-The study of autonomous \acp{UAV} has become a prominent sub-field of mobile robotics.
+%The study of autonomous \acp{UAV} has become a prominent sub-field of mobile robotics.
+This is en abstract.
 
 \vskip 1em
 
