--- a/src/abstrakt_cz.tex
+++ b/src/abstrakt_cz.tex
@@ -8,7 +8,8 @@
 \vskip 0.5em
 
 \sloppy
-Výzkum na poli autonomních bezpilotních prostředků (UAV) se stal významným oborem mobilní robotiky.
+%Výzkum na poli autonomních bezpilotních prostředků (UAV) se stal významným oborem mobilní robotiky.
+To je abstrakt v češtině.
 
 \vskip 1em
 
