Setting thesis structure

--- a/main.tex
+++ b/main.tex
@@ -114,16 +114,40 @@
 \pagenumbering{arabic}
 
 %% --------------------------------------------------------------
-%% |                        introduction                        |
+%% |                        Introduction                        |
 %% --------------------------------------------------------------
 
 \input{src/introduction.tex}
+
+%% --------------------------------------------------------------
+%% |                      Literature Review                     |
+%% --------------------------------------------------------------
+
+\input{src/literature_review.tex}
+
+%% --------------------------------------------------------------
+%% |                        Methodology                         |
+%% --------------------------------------------------------------
+
+\input{src/methodology.tex}
+
+%% --------------------------------------------------------------
+%% |                  Experiments and Results                   |
+%% --------------------------------------------------------------
+
+\input{src/experiments_and_results.tex}
 
 %% --------------------------------------------------------------
 %% |                How to write thesis in LaTeX                |
 %% --------------------------------------------------------------
 
 \input{src/how_to_write_thesis.tex}
+
+%% --------------------------------------------------------------
+%% |                         Discussion                         |
+%% --------------------------------------------------------------
+
+\input{src/discussion.tex}
 
 %% --------------------------------------------------------------
 %% |                         Conclusion                         |
