--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -4,3 +4,13 @@
 
 Summarize the achieved results.
 Can be similar as an abstract or an introduction, however, it should be written in past tense.
+
+\begin{itemize}
+    \item Summarize the key takeaways from the research, emphasizing the most effective text representation model for RAG in technical QA based on the evaluation criteria.
+    \item Briefly mention the trade-offs between factuality, CPU usage, and other factors in selecting representations for RAG.
+    \item Suggest potential future research directions, such as exploring other text representation methods or evaluating RAG performance on different datasets.
+\end{itemize}
+
+
+
+
