Add en/cz abstract

--- a/src/abstract_en.tex
+++ b/src/abstract_en.tex
@@ -7,9 +7,13 @@
 \section*{Abstract}
 \vskip 0.5em
 
-%The study of autonomous \acp{UAV} has become a prominent sub-field of mobile robotics.
-This is en abstract.
+This thesis investigates the application of word and sentence embeddings in \ac{RAG} for factual \ac{QA} tasks using technical manuals.
+The study explores the effectiveness of traditional FastText embeddings and advanced transformer-based models like \ac{BERT} in capturing semantic relationships within text.
+We evaluate the quality of these representations using analogy tests and confusion matrix analysis on the UPV corpus set.
 
+Subsequently, we will select optimal representations for \ac{RAG} algorithms and assess their impact on factual accuracy and computational efficiency during \ac{QA}.
+By analyzing the performance with different text chunk sizes, we aim to identify the optimal configuration for factual \ac{RAG} in technical domains.
+This research contributes to the field of \ac{NLP} by providing insights into selecting effective representations that balance factual accuracy and computational efficiency for \ac{QA} systems.
 
 \vskip 1em
 
