--- a/src/abstrakt_cz.tex
+++ b/src/abstrakt_cz.tex
@@ -8,8 +8,14 @@
 \vskip 0.5em
 
 \sloppy
-%Výzkum na poli autonomních bezpilotních prostředků (UAV) se stal významným oborem mobilní robotiky.
-To je abstrakt v češtině.
+
+Tato práce zkoumá aplikaci embeddingů slov a vět v modelu \acf{RAG} pro úlohy \acf{QA} zaměřené na fakta s využitím technických příruček.
+Studie se zabývá účinností tradičních embeddingů FastText a pokročilých modelů založených na transformátoru, jako je \acf{BERT}, při zachycování sémantických vztahů v textu.
+Kvalitu těchto reprezentací hodnotíme pomocí analogových testů a analýzy confusion matrix na korpusu UPV.
+Následně vybereme optimální reprezentace pro algoritmy \ac{RAG} a posoudíme jejich vliv na faktickou přesnost a výpočetní efektivitu během \ac{QA}.
+Analýzou výkonu s různými velikostmi textových fragmentů se snažíme identifikovat optimální konfiguraci pro faktické \ac{RAG} v technických oborech.
+Výzkum přispívá k oblasti zpracování přirozeného jazyka (\ac{NLP}) tím, že poskytuje poznatky o výběru efektivních reprezentací, které vyvažují faktickou přesnost a výpočetní efektivitu pro systémy \ac{QA}.
+
 
 \vskip 1em
 
