remove MRS, add Word2Vec, GloVe

--- a/main.bib
+++ b/main.bib
@@ -1,39 +1,24 @@
-@article{baca2021mrs,
-  author = {Baca, Tomas and Petrlik, Matej and Vrba, Matous and Spurny, Vojtech and Penicka, Robert and Hert, Daniel and Saska, Martin},
-  issue = {1},
-  journal = {{Journal of Intelligent {\&} Robotic Systems}},
-  month = {05},
-  number = {26},
-  pages = {1--28},
-  publisher = {Springer},
-  title = {{The MRS UAV System: Pushing the Frontiers of Reproducible Research, Real-world Deployment, and Education with Autonomous Unmanned Aerial Vehicles}},
-  type = {article},
-  volume = {102},
-  year = {2021},
+% Word2Vec
+@misc{mikolov2013efficient,
+      title={Efficient Estimation of Word Representations in Vector Space}, 
+      author={Tomas Mikolov and Kai Chen and Greg Corrado and Jeffrey Dean},
+      year={2013},
+      eprint={1301.3781},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
 }
 
-@inproceedings{baca2016embedded,
-  author = {Baca, Tomas and Loianno, Giuseppe and Saska, Martin},
-  booktitle = {{IEEE International Conference on Methods and Models in Automation and Robotics (MMAR)}},
-  organization = {IEEE},
-  pages = {992--997},
-  title = {{Embedded Model Predictive Control of Unmanned Micro Aerial Vehicles}},
-  type = {inproceedings},
-  year = {2016},
+% GloVe
+@inproceedings{pennington2014glove,
+  author = {Jeffrey Pennington and Richard Socher and Christopher D. Manning},
+  booktitle = {Empirical Methods in Natural Language Processing (EMNLP)},
+  title = {GloVe: Global Vectors for Word Representation},
+  year = {2014},
+  pages = {1532--1543},
+  url = {http://www.aclweb.org/anthology/D14-1162},
 }
 
-@article{benallegue2008high,
-  author = {Benallegue, Abdelaziz and Mokhtari, Abdellah and Fridman, Leonid},
-  journal = {International Journal of Robust and Nonlinear Control: IFAC-Affiliated Journal},
-  number = {4-5},
-  pages = {427--440},
-  publisher = {Wiley Online Library},
-  title = {{High-order sliding-mode observer for a quadrotor UAV}},
-  type = {article},
-  volume = {18},
-  year = {2008},
-}
-
+% MTEB
 @misc{muennighoff2023mteb,
       title={MTEB: Massive Text Embedding Benchmark}, 
       author={Niklas Muennighoff and Nouamane Tazi and Loïc Magne and Nils Reimers},
