Add reference fasttext transformers

--- a/main.bib
+++ b/main.bib
@@ -1,5 +1,5 @@
 % Word2Vec
-@misc{mikolov2013efficient,
+@misc{word2vec,
       title={Efficient Estimation of Word Representations in Vector Space}, 
       author={Tomas Mikolov and Kai Chen and Greg Corrado and Jeffrey Dean},
       year={2013},
@@ -9,7 +9,7 @@
 }
 
 % GloVe
-@inproceedings{pennington2014glove,
+@inproceedings{glove,
   author = {Jeffrey Pennington and Richard Socher and Christopher D. Manning},
   booktitle = {Empirical Methods in Natural Language Processing (EMNLP)},
   title = {GloVe: Global Vectors for Word Representation},
@@ -18,8 +18,26 @@
   url = {http://www.aclweb.org/anthology/D14-1162},
 }
 
+% FastText
+@article{fasttext,
+  title={Enriching Word Vectors with Subword Information},
+  author={Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
+  journal={arXiv preprint arXiv:1607.04606},
+  year={2016}
+}
+
+% Transformers
+@misc{transformers,
+      title={Attention Is All You Need}, 
+      author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
+      year={2023},
+      eprint={1706.03762},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
 % MTEB
-@misc{muennighoff2023mteb,
+@misc{mteb,
       title={MTEB: Massive Text Embedding Benchmark}, 
       author={Niklas Muennighoff and Nouamane Tazi and Loïc Magne and Nils Reimers},
       year={2023},
