add acronym CBOW

--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -8,4 +8,5 @@
   \acro{STS}[STS]{Semantic Textual Similarity}
   \acro{QA}[QA]{Question Answering}
   \acro{BERT}[BERT]{Bidirectional Encoder Representations from Transformers}
+  \acro{CBOW}[CBOW]{Continuous Bag-of-Words}
 \end{acronym}
