add acro ML and NN

--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -9,4 +9,6 @@
   \acro{QA}[QA]{Question Answering}
   \acro{BERT}[BERT]{Bidirectional Encoder Representations from Transformers}
   \acro{CBOW}[CBOW]{Continuous Bag-of-Words}
+  \acro{ML}[ML]{Machine Learning}
+  \acro{NN}[NN]{Neural Network}
 \end{acronym}
