Comment how_to_write_thesis.tex

--- a/main.tex
+++ b/main.tex
@@ -143,7 +143,7 @@
 %% |                How to write thesis in LaTeX                |
 %% --------------------------------------------------------------
 
-\input{src/how_to_write_thesis.tex}
+% \input{src/how_to_write_thesis.tex}
 
 %% --------------------------------------------------------------
 %% |                         Discussion                         |
