add TD-IDF and BoW reference

--- a/main.bib
+++ b/main.bib
@@ -45,3 +45,23 @@
       archivePrefix={arXiv},
       primaryClass={cs.CL}
 }
+
+% TF-IDF
+@article{tf-idf,
+  title={Indexing by Compression},
+  author={Spärck Jones, Karen},
+  journal={Journal of Documentation},
+  volume={28},
+  number={1},
+  pages={3--28},
+  year={1972},
+  publisher={Oxford University Press}
+}
+
+% BoW
+@book{bow,
+  title={Distributional Structure},
+  author={Harris, Zellig S.},
+  publisher={Linguistic Society of America},
+  year={1954}
+}
