Add BoW, TF-IDF, OOV acros

--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -11,4 +11,7 @@
   \acro{CBOW}[CBOW]{Continuous Bag-of-Words}
   \acro{ML}[ML]{Machine Learning}
   \acro{NN}[NN]{Neural Network}
+  \acro{BoW}[BoW]{Bag-of-Words}
+  \acro{TF-IDF}[TF-IDF]{Term Frequency-Inverse Document Frequency}
+  \acro{OOV}[OOV]{Out of vocabulary}
 \end{acronym}
