--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -9,6 +9,7 @@
   \acro{QA}[QA]{Question Answering}
   \acro{BERT}[BERT]{Bidirectional Encoder Representations from Transformers}
   \acro{CBOW}[CBOW]{Continuous Bag-of-Words}
+  \acro{GloVe}[GloVe]{Global vectors}
   \acro{ML}[ML]{Machine Learning}
   \acro{NN}[NN]{Neural Network}
   \acro{BoW}[BoW]{Bag-of-Words}
