--- a/src/fig/tikz/evolution_text_representaion.tex
+++ b/src/fig/tikz/evolution_text_representaion.tex
@@ -2,7 +2,7 @@
     %Nodes
     \begin{scope}[every node/.style={rectangle, draw=black!60, very thin, align=left, minimum width=10em}]
     \node (Word2Vec)     []                  {Word2Vec};
-    \node (GloVe)        [below=of Word2Vec] {GloVe};
+    \node (GloVe)        [below=of Word2Vec] {\ac{GloVe}};
     \node (FastText)     [below=of GloVe]    {FastText};
     \node (Transformers) [below=of FastText] {Transformers};
     \end{scope}
