--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -60,7 +60,7 @@ From sentiment analysis to machine translation, this ability to represent meanin
 \ac{NLP} has undergone a significant transformation in its approach to text representation.
 Early methods, such as one-hot encoding, while simple to implement, suffered from limitations in efficiency due to dimensionality and sparsity issues.
 
-Word embedding techniques (e.g., Word2Vec, GloVe, FastText) offered a significant improvement by capturing semantic relationships between words through high-dimensional word vectors.
+Word embedding techniques (e.g., Word2Vec, \ac{GloVe}, FastText) offered a significant improvement by capturing semantic relationships between words through high-dimensional word vectors.
 However, these techniques primarily focused on local context within a limited window, hindering their ability to capture complex relationships within sentences or documents.
 
 The emergence of deep learning architectures, particularly transformer-based models like \ac{BERT}, revolutionized the field of text representation.
