--- a/main.bib
+++ b/main.bib
@@ -65,3 +65,12 @@
   publisher={Linguistic Society of America},
   year={1954}
 }
+
+@misc{bert_mbert,
+      title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding}, 
+      author={Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
+      year={2019},
+      eprint={1810.04805},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
