acro add mBERT, MTEB

--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -15,4 +15,6 @@
   \acro{BoW}[BoW]{Bag-of-Words}
   \acro{TF-IDF}[TF-IDF]{Term Frequency-Inverse Document Frequency}
   \acro{OOV}[OOV]{Out of vocabulary}
+  \acro{mBERT}[mBERT]{Multilingual Bidirectional Encoder Representations from Transformers}
+  \acro{MTEB}[MTEB]{Massive Text Embedding Benchmark}
 \end{acronym}
