litrev: return back skipgram scheme

--- a/src/literature_review.tex
+++ b/src/literature_review.tex
@@ -12,6 +12,7 @@ As \ac{NN} architecture are used \ac{CBOW} and Skip-gram, \reffig{fig:cbow_skipg
 \begin{figure}[h]
     \centering
     \input{src/fig/tikz/cbow_scheme.tex}
+    \input{src/fig/tikz/skip_gram_scheme.tex}
     \caption{\ac{CBOW} and Skip-gram schemes respectively}
     \label{fig:cbow_skipgram_scheme}
 \end{figure} 
